# fedora-config

./: README.md  delete.packages  fedora-setup.sh  fedora.packages  flathub.packages  gnome.packages  gnome_flatpak.packages  install_setup.sh  inventory  plasma.packages  plasma_flatpak.packages  pyproject.toml  python.packages  requirements.yml  setup.yml  zshrc.aliases
flathub_packages/defaults/: main.yml
flathub_packages/handlers/: main.yml
flathub_packages/molecule/default/: converge.yml
flathub_packages/tasks/: main.yml
flathub_packages/tests/: test.yml
flathub_packages/vars/: main.yml
install_pyenv/defaults/: main.yml
install_pyenv/handlers/: main.yml
install_pyenv/molecule/default/: converge.yml
install_pyenv/tasks/: main.yml
install_pyenv/tests/: test.yml
install_pyenv/vars/: main.yml
install_tfenv/defaults/: main.yml
install_tfenv/handlers/: main.yml
install_tfenv/molecule/default/: converge.yml
install_tfenv/tasks/: main.yml
install_tfenv/tests/: test.yml
install_tfenv/vars/: main.yml
rpm_packages/defaults/: main.yml
rpm_packages/handlers/: main.yml
rpm_packages/molecule/default/: converge.yml
rpm_packages/tasks/: main.yml
rpm_packages/tests/: test.yml
rpm_packages/vars/: main.yml
