[tool.poetry]
name = "fedora-config-ansible"
version = "0.1.0"
description = "my personal fedora config"
authors = ["Ismaïl Lachheb <ismael.lachheb@protonmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^2.10.5"
molecule = "^3.2.2"
docker-py = "^1.10.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-testinfra = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
